2006-11-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Rewrote s_filter function (has still some restrictions).

2006-11-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Various fixes in handling metadata.

	* R/: Added update mechanism for text document collections.

2006-11-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Merging of document collections now creates a binary tree
	for reconstructing merged document collections.

	* R/: Redesign of metadata for document collections.

2006-11-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Messages now use \code{ngettext}.

2006-11-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Added functions for modifying and removing metadata.

2006-11-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated some documentation.

	* R/: Corrected some connection issues.

	* inst/doc: Worked on the vignette.

2006-10-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/: Added texts and started vignette.

	* R/: Final changes based upon David's comments.

2006-10-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* NAMESPACE: Corrected exports (generic methods need exportMethods
	directives!).

2006-10-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Modified the TextDocCol constructur and various parsers. It
	is now modular and supports various file formats via plugins (see
	the new "Source" class).

2006-10-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Revised documentation after previous code changes.

2006-10-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Remaining changes as discussed with David.

2006-10-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Some changes as suggested by David. The rest will follow
	within the next days.

2006-09-26  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Finished documentation.

2006-09-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Wrote some documentation.

2006-09-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
