@@ -1,5 +1,7 @@
 2006-11-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* R/: Text documents' slot metadata is now accessible in s_filter.
+
 	* R/: Rewrote s_filter function (has still some restrictions).
 
 2006-11-20  Ingo Feinerer  <h0125130@wu-wien.ac.at>
